--- a/LibraryManagementSystem/Development/Source/LibraryManagementSystemSpring/WebContent/WEB-INF/web.xml
+++ b/LibraryManagementSystem/Development/Source/LibraryManagementSystemSpring/WebContent/WEB-INF/web.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>LibraryManagementSystemSpring</display-name>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  
-  <context-param>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>LibraryManagementSystemSpring</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:/jpaContext.xml</param-value>
 	</context-param>
@@ -13,8 +16,6 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
-
 	<servlet>
 		<servlet-name>EMSServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -28,5 +29,4 @@
 		<servlet-name>EMSServlet</servlet-name>
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
-	
 </web-app>
